2024-02-23T16:17:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8022012059 # 143
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-23
* notice: last 14d: unq all: 2 4133
* notice: prev accum: outdated-unq outdated-all / unq all: 1948 190334 / 1968 194634
* notice: next accum: outdated-unq outdated-all / unq all: 1948 190334 / 1968 194727
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -93 / +2 +205 -0 -0 / 2 205
* notice: removed / changed dates: [] / [2024-02-09 2024-02-23]

2024-02-23T08:18:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8016443064 # 142
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-23
* notice: last 14d: unq all: 2 4133
* notice: prev accum: outdated-unq outdated-all / unq all: 1948 190334 / 1966 194522
* notice: next accum: outdated-unq outdated-all / unq all: 1948 190334 / 1968 194634
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -1 -92 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2024-02-09 2024-02-23]

2024-02-23T01:03:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8013212058 # 141
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-23
* notice: last 14d: unq all: 2 4113
* notice: prev accum: outdated-unq outdated-all / unq all: 1946 190033 / 1966 194426
* notice: next accum: outdated-unq outdated-all / unq all: 1948 190334 / 1966 194522
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -0 -75 / +2 +301 -0 -0 / 2 301
* notice: removed / changed dates: [2024-02-08] / [2024-02-09 2024-02-22]

2024-02-22T16:18:55Z: