@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-02-23T16:17:59Z",
-  "count_outdated" : 190334,
-  "uniques_outdated" : 1948,
-  "count" : 194727,
+  "timestamp" : "2024-02-24T01:01:32Z",
+  "count_outdated" : 190634,
+  "uniques_outdated" : 1950,
+  "count" : 194823,
   "uniques" : 1968,
   "clones" : [
     {
-      "timestamp": "2024-02-09T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 300 ],
-      "count_decinc": [ 260, 300 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2024-02-10T00:00:00Z",
-      "count": 299,
+      "count": 224,
       "count_minmax": [ 111, 299 ],
-      "count_decinc": [ 0, 299 ],
+      "count_decinc": [ 75, 299 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-23T00:00:00Z",
-      "count": 205,
-      "count_minmax": [ 112, 205 ],
-      "count_decinc": [ 0, 205 ],
+      "count": 301,
+      "count_minmax": [ 112, 301 ],
+      "count_decinc": [ 0, 301 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
